--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-leaflet": "^4.2.1"
+    "react-leaflet": "^4.2.1",
+    "react-responsive-carousel": "^3.2.23"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.8",
