--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -5,8 +5,7 @@
 name: Deploy Next.js site to Pages
 on:
   push:
-    branches:
-      - master
+    branches: ["main"]
 
 permissions:
   contents: read
